code perfil.html
Removed notification button and added script reference.

--- a/pelfil.html
+++ b/pelfil.html
@@ -17,10 +17,6 @@
 
             <button class="menu-btn">
                 <span class="icon">📦</span> Projetos
-            </button>
-            <button class="menu-btn">
-                <span class="icon">🔔</span> Notificações
-            </button>
             <button class="menu-btn logout">
                 <span class="icon">↩</span> Sair
             </button>
@@ -49,9 +45,9 @@
 
                 <button class="save-btn">Salvar alterações</button>
             </div>
-
         </main>
-
     </div>
+    <script src="perfil.js"></script>
 </body>
 </html>
+
